<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/EmailAction"
        android:visibility="invisible"
        android:layout_below="@+id/toolbar3">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:textColor="?attr/colorAccent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/tvUsername" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/tvEmail"
            android:textColor="?android:attr/colorAccent" />

        <EditText
...
            android:textColor="@color/colorAccent"
            android:textAlignment="viewEnd" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btProceed"
            android:layout_below="@+id/etUsername"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            />

        <Button
            android:text="Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BackToMenu"
            android:layout_below="@+id/btProceed"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/SignInMenu"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar3">

        <Button
            android:text="@string/sign_in_with_google"
            android:layout_width="match_parent"
...
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/sign_in_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SignInEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:fontFamily="sans-serif"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:background="@android:drawable/btn_default_small" />

...
