<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:text="@string/current_quest"
        android:layout_below="@+id/btback"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cast_expanded_controller_progress_text_color" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
...
        android:id="@+id/btback"
        android:onClick="back"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btreset"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="Reset" />

    <Button
        android:text="Edit"
...

    <TextView
        android:text="@string/usernamet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameprofile"
        android:layout_above="@+id/lvl"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView7"
        android:textColor="@color/cast_expanded_controller_text_color" />

    <TextView
        android:text="@string/lvl"
...
