<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tlproject.omada1.tl_project.Activities.MapsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar2"
        android:layout_alignBottom="@+id/btprofile"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/actionbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:onClick="ProfileClick" />

    <Button
        android:text="@string/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btlogout"
        android:onClick="Logout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
...
